# investment-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  DATA_FLOW.md  IMPLEMENTATION_SUMMARY.md  INSIDER_TRADING_SETUP.md  QUICKSTART_EVENTS.md  RAYCAST_SETUP.md  README.md  RISK_ANALYSIS_TESTING.md  SHORT_VOLUME_PLAN.md  SHORT_VOLUME_SETUP.md  STORAGE_SAFETY.md  TEST_BUCKET_SETUP.md  USAGE.md  UV_USAGE.md  check_setup.py  config.yaml  config.yaml.example  migrate_to_gcp.py  portfolio_history.json.bak  portfolio_history.json.bak.20260101-115957  portfolio_history.json.bak.20260101-120321  portfolio_history.json.bak.20260101-122158  pyproject.toml  requirements.txt  run_events.py  server.py  setup_alpha_vantage.sh  setup_fintel.sh  setup_keychain.sh  sheet-details.json  start_mcp.sh  test_buy_validation.py  test_concentration.py  test_config.py  test_dashboard.py  test_gcp_storage.py  test_insider_trading.py  test_raycast_integration.sh  (+9 more)
.github/: plan.md
agent/: __init__.py  analysis.py  buy_validation.py  config.py  config_models.py  daily_analysis.py  dashboard_components.py  dashboard_views.py  earnings_models.py  earnings_provider.py  events_tracker.py  insider_trading.py  main.py  raycast_tools.py  reporting.py  risk_analysis.py  sell_validation.py  sheets_connector.py  short_volume.py  storage.py  storage_backend.py  transaction_models.py  transaction_storage.py  utils.py  visualization.py
raycast-extension/: CHANGELOG.md  NEW_LAPTOP_SETUP.md  QUICKSTART.md  README.md  package-lock.json  package.json  raycast-env.d.ts  test-uv-detection.js  tsconfig.json
(+31 files in other folders)
