[project]
name = "investment-mcp"
version = "0.1.0"
description = "MCP Agent for Portfolio Monitoring & Performance Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-cloud-storage>=2.10.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scipy>=1.10.0",
    "yfinance>=0.2.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[dependency-groups]
dev = []